--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prettier": "^2.4.0"
   },
   "dependencies": {
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "mysql2": "^2.3.0",
+    "sequelize": "^6.6.5"
   }
 }
