--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-prettier": "^4.0.0",
+    "install": "^0.13.0",
     "jest": "^27.0.6",
     "prettier": "^2.4.0"
   },
   "dependencies": {
-    "node-fetch": "^2.6.1",
+    "express": "^4.17.1",
     "mysql2": "^2.3.0",
+    "node-fetch": "^2.6.1",
     "sequelize": "^6.6.5"
   }
 }
